--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </li>
         <li>
           <a href="https://github.com/Jose26362780" target="_blank"
-            >Ver meu Portafolio</a
+            >Ver meu portfólio</a
           >
         </li>
         <li>
