--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
  <!-- colocar el link de mi pagina -->
         <li>
-          <a href="#" target="_blank"
+          <a href="https://my-portfolio-jose-martinez.netlify.app/" target="_blank"
             >Ver meu portfólio</a
           >
         </li>
