atualized my notion link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
 
         <li>
-          <a href="https://detailed-vulcanodon-10f.notion.site/Rocketseat-ONE-8520f3d3cb1f4a2ca01e586f7663cf3b" target="_blank"
+          <a href="https://josemartinez.notion.site/Guia-de-Estudos-para-ser-um-Desenvolvedor-de-Sucesso-cb229c001dc341b0bf6a35c9dcfb1158?pvs=4" target="_blank"
             >Meu Material de Estudos</a
           >
         </li>
